# llmz

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
hw/: hw-1.ipynb  hw-2.ipynb
