[project]
name = "llmz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "google-genai>=2.8.0",
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.3",
]
